
Mon Mar 12 17:07:32 CET 2007 Paolo Molaro <lupus@ximian.com>

	* amd64/amd64-codegen.h: removed some useless size rex prefixes.

Wed Jan 24 21:00:40 CET 2007 Paolo Molaro <lupus@ximian.com>

	* arm/arm-codegen.h: fixed encoding of short/byte load/store
	instructions with negative immediate offsets.

Mon Nov 20 17:36:45 CET 2006 Paolo Molaro <lupus@ximian.com>

	* arm/arm-codegen.h: added suppot for thumb interworking instructions.

Wed Nov 15 16:56:53 CET 2006 Paolo Molaro <lupus@ximian.com>

	* mips/*: fixes by Mark E Mason <mark.e.mason@broadcom.com>.

2006-09-12  Zoltan Varga  <vargaz@gmail.com>

	* alpha/alpha-codegen.h: More alpha updates from Sergey Tikhonov <tsv@solvo.ru>.

Tue Sep 12 13:09:56 CEST 2006 Paolo Molaro <lupus@ximian.com>

	* arm/*: VFP floating point format code generation support.

2006-09-12  Zoltan Varga  <vargaz@gmail.com>

	* ia64/ia64-codegen.h: Add xmpy_l/u pseudo ops.

2006-07-19  Zoltan Varga  <vargaz@gmail.com>

	* amd64/amd64-codegen.h: Fix amd64_mov_mem_reg.

	* alpha/alpha-codegen.h alpha/test.c alpha/tramp.c: Applied patch from 
	Sergey Tikhonov <tsv@solvo.ru>. Updates to alpha support.

Thu Jun 15 16:59:36 CEST 2006 Paolo Molaro <lupus@ximian.com>

	* ppc/ppc-codegen.h: reduce noisy build warnings by
	casting to the more commonly used unsigned char type
	(from johannes@sipsolutions.net (Johannes Berg)).

2006-05-14  Zoltan Varga  <vargaz@gmail.com>

	* ia64/ia64-codegen.h (ia64_fetchadd8_acq_hint_pred): Fix encoding of this
	opcode.

2006-04-21  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am (SUBDIRS): Revert the last change as arm depends on the old
	behaviour.

2006-04-12  Zoltan Varga  <vargaz@gmail.com>

	* sparc/sparc-codegen.h (sparc_inst_i): New disassembly macro.

2006-04-04  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am (SUBDIRS): Avoid compiling subdirs needed by the
	interpreter.

2005-12-22  Zoltan Varga  <vargaz@gmail.com>

	* sparc/sparc-codegen.h (sparc_membar): Add membar instruction.
