@@ -1,3 +1,7 @@
+2007-04-23  Zoltan Varga  <vargaz@gmail.com>
+
+	* alpha/alpha-codegen.h: More alpha port work from 
+	Sergey Tikhonov <tsv@solvo.ru>.
 
 Mon Mar 12 17:07:32 CET 2007 Paolo Molaro <lupus@ximian.com>
 
